--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
   </head>
   <body>
     <ul id="posts">
-    <% @blog.posts.each do |post| %>
+    <% @blog.each_published_post do |post| %>
       <li class="post">
         <h1><%= post.title %></h1>
         <%= post.content %>
